--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
         <nav class="header_menu">
             <ul class="header_menu_box">
-                <li><a class="menu__item" href="#">Главная</a></li>
-                <li><a class="menu__item" href="#">Проекты</a></li>
-                <li><a class="menu__item" href="#">Команда</a></li>
-                <li><a class="menu__item" href="#">Блог</a></li>
-                <li><a class="menu__item" href="#">Контакты</a></li>
+                <li><a class="menu__item" href="#">Главная</a><img src="img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="#">Проекты</a><img src="img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="#">Команда</a><img src="img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="#">Блог</a><img src="img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="#">Контакты</a><img src="img/kunai.png" alt="kuni"> </li>
             </ul>
         </nav>
     </header>
@@ -128,6 +128,8 @@
             voluptatibus perferendis perspiciatis nostrum adipisci. Odio perspiciatis molestiae officiis consectetur quia nostrum laudantium consequuntur asperiores vero optio voluptates quae quo ipsam quidem excepturi, ut voluptatum, animi eos temporibus
             quod architecto magni repudiandae laboriosam dignissimos! Saepe accusantium quasi fugiat, et possimus temporibus!</p>
     </main>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
