--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </h2>
                 <div class="cards-heros">
                     <div class="card-hero">
-                        <img src="img/hero/naruto.png" alt="">
+                        <img src="img/hero/Naruto.png" alt="">
                         <p>Наруто Удзумаки</p>
                     </div>
                     <div class="card-hero">
