--- a/heros/heros.html
+++ b/heros/heros.html
@@ -31,9 +31,9 @@
             <ul class="header_menu_box">
                 <li><a class="menu__item" href="../index.html">Главная</a><img src="../img/kunai.png" alt="kuni"> </li>
                 <li><a class="menu__item" href="heros.html">Герои</a><img src="../img/kunai.png" alt="kuni"> </li>
-                <li><a class="menu__item" href="#">Видео</a><img src="../img/kunai.png" alt="kuni"> </li>
-                <li><a class="menu__item" href="#">Игры</a><img src="../img/kunai.png" alt="kuni"> </li>
-                <li><a class="menu__item" href="#">Контакты</a><img src="../img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="../gallery/gallery.html">Галерея</a><img src="../img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="../video/video.html">Видео</a><img src="../img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="../game/game.html">Игры</a><img src="../img/kunai.png" alt="kuni"> </li>
             </ul>
         </nav>
     </header>
@@ -91,7 +91,7 @@
                         <div class="foto__person">
                             <img src="img/sakura_chibi.png" alt="">
                         </div>
-                        <p class="name__person">Наруто Удзумаки</p>
+                        <p class="name__person">Сакура Харуно</p>
 
                         <div class="infoPerson">
                             <div class="infoPerson_foto">
@@ -110,7 +110,7 @@
                         <div class="foto__person">
                             <img src="img/kakashi_chibi.png" alt="">
                         </div>
-                        <p class="name__person">Наруто Удзумаки</p>
+                        <p class="name__person">Хатаке Какаши</p>
 
                         <div class="infoPerson">
                             <div class="infoPerson_foto">
