--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <ul class="header_menu_box">
                 <li><a class="menu__item" href="index.html">Главная</a><img src="img/kunai.png" alt="kuni"> </li>
                 <li><a class="menu__item" href="heros/heros.html">Герои</a><img src="img/kunai.png" alt="kuni"> </li>
-                <li><a class="menu__item" href="#">Видео</a><img src="img/kunai.png" alt="kuni"> </li>
-                <li><a class="menu__item" href="#">Игры</a><img src="img/kunai.png" alt="kuni"> </li>
-                <li><a class="menu__item" href="#">Контакты</a><img src="img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="gallery/gallery.html">Галерея</a><img src="img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="video/video.html">Видео</a><img src="img/kunai.png" alt="kuni"> </li>
+                <li><a class="menu__item" href="game/game.html">Игры</a><img src="img/kunai.png" alt="kuni"> </li>
             </ul>
         </nav>
     </header>
