--- a/video/video.html
+++ b/video/video.html
@@ -49,6 +49,80 @@
         </div>
     </section>
 
+    <section class="section">
+        <div class="wrapper">
+            <article class="description">
+                <div class="amv">
+                    <div class="amv__option">
+                        <span class="myarrow"></span>
+                        <select id="select" onchange="select()">
+                              <option value="myVideo" selected onchange="select(this)">Собственные нароботки</option>
+                              <option value="othetVideo" onchange="select(this)">Просторы интернета</option>
+                            </select>
+                    </div>
+
+                    <div class="amv__my_videos" id="my_video">
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_01.jpg">
+                                <source src="video\naruto_1.mp4">
+                               </video>
+                        </div>
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_01.jpg">
+                                <source src="video\naruto_2.mp4">
+                               </video>
+                        </div>
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_01.jpg">
+                                <source src="video\naruto_3.mp4">
+                               </video>
+                        </div>
+                        <div class="border_bt"></div>
+                    </div>
+
+
+
+                    <div class="amv__my_videos" id="other_video">
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                                <source src="video\other_video\001.mp4">
+                               </video>
+                        </div>
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                                <source src="video\other_video\002.mp4">
+                               </video>
+                        </div>
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                                <source src="video\other_video\003.mp4">
+                               </video>
+                        </div>
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                                <source src="video\other_video\004.mp4">
+                               </video>
+                        </div>
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                                <source src="video\other_video\005.mp4">
+                               </video>
+                        </div>
+                        <div class="amv__video">
+                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                                <source src="video\other_video\006.mp4">
+                               </video>
+                        </div>
+                        <div class="border_bt"></div>
+                    </div>
+
+
+
+            </article>
+            </div>
+    </section>
+
+
 
 
     <script src="../index.js"></script>
