5 page games, map

--- a/game/game.html
+++ b/game/game.html
@@ -51,6 +51,34 @@
     </section>
 
 
+    <section class="section_map">
+        <div class="wrapper">
+            <h3 id="game_treasure">Игра в поисках сокровища</h3>
+            <div class="map">
+                <p id="result"></p>
+                <div class="map_world">
+                    <img id="mapX" src="map/kartamiranaruto.jpg">
+                    <div class="map__naru">
+                        <img src="map/naru.png" alt="">
+                    </div>
+                    <div class="feels" id="naruto_agree">
+                        <img src="map/naruto_agree.png" alt="">
+                        <p>Вы проиграли :(((</p>
+                    </div>
+                    <div class="feels" id="naruto_shock">
+                        <img src="map/naruto_shock.png" alt="">
+                        <p>У Наруто заканчиваются припасы. Вам нужно поторопиться</p>
+                    </div>
+                    <div class="feels" id="naruto_win">
+                        <img src="map/naruto_win.png" alt="">
+                        <p>Ура, Вы нашли клад!!! Наруто доволен!!!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="../index.js"></script>
     <script src="game.js"></script>
