--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <div class="header_name">
             <div class="crows"></div>
             <h1>Naruto</h1>
-            <label for="menu" class="label_menu">
-                <input id="menu" type="checkbox">
-                <span id="icon_menu"></span>
-            </label>
+            <div class="burger__menu">
+                <label for="menu" class="label_menu">
+                    <input id="menu" type="checkbox">
+                    <span id="icon_menu"></span>
+                </label>
+            </div>
         </div>
 
         <nav class="header_menu">
