--- a/game/game.html
+++ b/game/game.html
@@ -22,10 +22,12 @@
                     <h1 id="naruto">Naruto</h1>
                 </a>
             </div>
-            <label for="menu" class="label_menu">
-                <input id="menu" type="checkbox">
-                <span id="icon_menu"></span>
-            </label>
+            <div class="burger__menu">
+                <label for="menu" class="label_menu">
+                    <input id="menu" type="checkbox">
+                    <span id="icon_menu"></span>
+                </label>
+            </div>
         </div>
 
         <nav class="header_menu">
