adaptive 3 page gallery, open big img

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="body">
-    <header>
+    <header id="headerGallery">
 
         <div class="header_name">
             <div class="crows"></div>
@@ -41,7 +41,7 @@
         </nav>
     </header>
 
-    <section class="section__top">
+    <section class="section__top" id="sectionTop">
         <div class="wrapper">
             <article class="description">
 
