--- a/video/video.html
+++ b/video/video.html
@@ -66,20 +66,22 @@
 
                     <div class="amv__my_videos" id="my_video">
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_01.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_01.jpg">
                                 <source src="video\naruto_1.mp4">
                                </video>
                         </div>
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_01.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_01.jpg">
                                 <source src="video\naruto_2.mp4">
                                </video>
                         </div>
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_01.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_01.jpg">
                                 <source src="video\naruto_3.mp4">
                                </video>
                         </div>
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
                         <div class="border_bt"></div>
                     </div>
 
@@ -87,36 +89,39 @@
 
                     <div class="amv__my_videos" id="other_video">
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_02.jpg">
                                 <source src="video\other_video\001.mp4">
                                </video>
                         </div>
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_02.jpg">
                                 <source src="video\other_video\002.mp4">
                                </video>
                         </div>
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_02.jpg">
                                 <source src="video\other_video\003.mp4">
                                </video>
                         </div>
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_02.jpg">
                                 <source src="video\other_video\004.mp4">
                                </video>
                         </div>
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_02.jpg">
                                 <source src="video\other_video\005.mp4">
                                </video>
                         </div>
                         <div class="amv__video">
-                            <video width="300" height="250" preload="none" controls="controls" poster="img/simbol_02.jpg">
+                            <video width="100%" height="100%" preload="none" controls="controls" poster="img/simbol_02.jpg">
                                 <source src="video\other_video\006.mp4">
                                </video>
                         </div>
                         <div class="border_bt"></div>
+
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
 
 
