--- a/heros/heros.html
+++ b/heros/heros.html
@@ -277,7 +277,7 @@
                         </div>
                         <div class="card__person">
                             <div class="foto__person">
-                                <img src="img/li_chibi.png" alt="Rock Lee">
+                                <img src="img/le2_chibi.png" alt="Rock Lee">
                             </div>
                             <p class="name__person">Рок Ли</p>
 
